--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front",
+  "name": "app",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,18 +10,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "babel-plugin-root-import": "^6.6.0",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "node-sass": "^7.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-router-native": "^6.2.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "sass": "^1.49.0",
     "typescript": "~4.3.5"
   },
   "private": true
 }
+
