--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "eslint --ext .tsx --ext .ts src/"
   },
   "dependencies": {
     "babel-plugin-root-import": "^6.6.0",
+    "eslint-plugin-import": "^2.25.4",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "node-sass": "^7.0.1",
@@ -25,9 +27,13 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "eslint": "^8.8.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "sass": "^1.49.0",
     "typescript": "~4.3.5"
   },
   "private": true
 }
-
