--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint": "eslint --ext .tsx --ext .ts src/"
+    "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.22",
+    "@types/styled-components-react-native": "^5.1.3",
     "babel-plugin-root-import": "^6.6.0",
     "eslint-plugin-import": "^2.25.4",
     "expo": "~44.0.0",
