--- a/package.json
+++ b/package.json
@@ -8,18 +8,15 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint App.tsx ./src --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@types/styled-components": "^5.1.22",
-    "@types/styled-components-react-native": "^5.1.3",
     "babel-plugin-root-import": "^6.6.0",
-    "eslint-plugin-import": "^2.25.4",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
-    "node-sass": "^7.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-is": "^17.0.2",
     "react-native": "0.64.3",
     "react-native-web": "0.17.1",
     "react-router-native": "^6.2.1",
@@ -27,23 +24,24 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
-    "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0",
-    "eslint": "^8.8.0",
-    "eslint-config-prettier": "^8.3.0",
+    "@types/styled-components": "^5.1.22",
+    "@types/styled-components-react-native": "^5.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react": "^7.29.3",
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^2.5.1",
     "sass": "^1.49.0",
     "typescript": "~4.3.5"
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier --write --ignore-unknown"
-    ]
   },
   "private": true
 }
