--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "17.0.1",
     "react-is": "^17.0.2",
     "react-native": "0.64.3",
+    "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.1",
     "react-router-native": "^6.2.1",
     "styled-components": "^5.3.3"
