--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint App.tsx ./src --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.4.1",
     "babel-plugin-root-import": "^6.6.0",
     "expo": "~44.0.0",
     "expo-font": "~10.0.4",
