--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
   "expo": {
-    "name": "sansa",
+    "name": "app",
     "slug": "sans",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "landscape",
     "icon": "./assets/images/Team_success_Two_Color.png",
     "splash": {
       "image": "./assets/images/Team_success_Two_Color.png",
