--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "app",
     "slug": "sans",
     "version": "1.0.0",
-    "orientation": "landscape",
+    "orientation": "portrait",
     "icon": "./assets/images/Team_success_Two_Color.png",
     "splash": {
       "image": "./assets/images/Team_success_Two_Color.png",
@@ -23,6 +23,11 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/Team_success_Two_Color.png",
         "backgroundColor": "#FFFFFF"
+      }, 
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyDPoDTXy1eJsSlgFyGc4sIrf8kO8q6V4z8"
+        }
       }
     },
     "web": {
