feat(Search) add expo location

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-root-import": "^6.6.0",
     "expo": "~44.0.0",
     "expo-font": "~10.0.4",
+    "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
     "generate-template-files": "^3.2.0",
     "metro-config": "^0.69.0",
@@ -26,6 +27,7 @@
     "react-dom": "17.0.1",
     "react-is": "^17.0.2",
     "react-native": "0.64.3",
+    "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-maps": "0.29.4",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-svg": "^12.3.0",
