feat(i18n, Plus Page): add react i18next for translations and create configuration, and change plus page

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,6 +38,7 @@
       "error",
       { "argsIgnorePattern": "^_" }
     ],
+    "@typescript-eslint/no-floating-promises": "off",
     "@typescript-eslint/no-explicit-any": "off",
     // imports
     "import/no-unresolved": [2, { "ignore": ["~/*"] }],
