--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@react-native-picker/picker": "^2.4.1",
+    "axios": "^0.27.2",
     "babel-plugin-root-import": "^6.6.0",
     "expo": "~44.0.0",
     "expo-font": "~10.0.4",
@@ -27,6 +28,7 @@
     "react-dom": "17.0.1",
     "react-is": "^17.0.2",
     "react-native": "0.64.3",
+    "react-native-dotenv": "^3.3.1",
     "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-maps": "0.29.4",
     "react-native-phone-number-input": "^2.1.0",
