--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-is": "^17.0.2",
     "react-native": "0.64.3",
     "react-native-dotenv": "^3.3.1",
+    "react-native-draggable-panel": "^1.2.3",
     "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-maps": "0.29.4",
     "react-native-phone-number-input": "^2.1.0",
