--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "17.0.1",
     "react-is": "^17.0.2",
     "react-native": "0.64.3",
+    "react-native-carousel-control": "^2.0.1",
     "react-native-dotenv": "^3.3.1",
     "react-native-draggable-panel": "^1.2.3",
     "react-native-geolocation-service": "^5.3.0-beta.4",
