--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-root-import": "^6.6.0",
     "expo": "~44.0.0",
     "expo-font": "~10.0.4",
+    "expo-screen-orientation": "~4.1.1",
     "expo-status-bar": "~1.2.0",
     "generate-template-files": "^3.2.0",
     "i18next": "^21.8.11",
