--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-devtools-core": "~4.14.0"
   },
   "dependencies": {
+    "@expo/status-bar-height": "^0.0.1",
     "@react-native-picker/picker": "^2.4.1",
     "axios": "^0.27.2",
     "babel-plugin-root-import": "^6.6.0",
@@ -38,6 +39,7 @@
     "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-maps": "0.29.4",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.1",
     "react-router-native": "^6.2.1",
