--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "app",
-    "slug": "sans",
+    "name": "sansa",
+    "slug": "sanss",
     "version": "1.0.0",
     "icon": "./assets/images/Team_success_Two_Color.png",
     "orientation": "default",
